fix for fdo#38544 enable Object/Edit menu item for ole/embedded objects